--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -4,18 +4,32 @@
 #songsContainer{
     display:grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    background-color: var(--background);
+    color: var(--text);
 }
 
 .Song {
     border: 1px solid green;
+    border-radius:5%;
+    background-color: var(--elements);
     height:300px;
     width: 250px;
+    margin-top: 15px;
+    text-align: center;
     img{
         margin:auto;
         height:50%;
+        border-bottom-left-radius: 5%;
+        border-bottom-right-radius: 5%;
     }
     a{
         text-decoration: none;
         color:black;
+    }
+    h3{
+        margin: 1.5rem 0.5rem 0.5rem 0.5rem;
+    }
+    h4{
+        margin: 0.5rem;
     }
 }
