--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -1,6 +1,20 @@
-*{
-    /*add a color palette here...*/
-}
+
+:root {
+    --light-mode-input: 0, 0%, 52%; /* average grey */
+  }
+  
+  [data-theme="dark"] {
+    --elements: 209, 23%, 22%; /* 70% black+10%blue */
+    --background: 207, 26%, 17%; /* 85% black +10%blue */
+    --text: 0, 0%, 100%; /* white */
+  }
+  
+  [data-theme="light"] {
+    --elements: hsl(0, 100%, 99%); /* white */
+    --background: hsl(0, 0%, 95%) /* light gray*/
+    --text: 200, 15%, 8%; /* 90% black */
+  }
+  
 #songsContainer{
     display:grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
