--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -14,6 +14,7 @@
     width: 250px;
     margin-top: 15px;
     text-align: center;
+    transition: 0.3s ease;
     img{
         margin:auto;
         height:50%;
@@ -30,4 +31,8 @@
     h4{
         margin: 0.5rem;
     }
+}
+
+.Song:hover{
+    scale:1.05;
 }
