--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -15,6 +15,7 @@
     margin-top: 15px;
     text-align: center;
     transition: 0.3s ease;
+    overflow:hidden;
     img{
         margin:auto;
         height:50%;
