--- a/client/src/components/Books/Books.css
+++ b/client/src/components/Books/Books.css
@@ -15,6 +15,7 @@
 a {
     text-decoration: none;
     color: var(--link-color);
+    transition: color 0.3s ease;
 }
 a:hover {
     color: var(--link-hover);
@@ -36,7 +37,7 @@ a:hover {
     transition: background-color 0.3s ease, color 0.3s ease;
     font-family: Arial, sans-serif;
     color: var(--text);
-    height: 100%;
+    min-height: 100vh;
 }
 #main-content {
     background-color: var(--background);
@@ -146,6 +147,7 @@ a:hover {
 #cards-container{
     max-width: var(--maxWidth);
     min-width: 240px;
+    min-height: 600px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -283,12 +285,75 @@ a:hover {
     cursor: pointer;
     transition: 0.3s ease;
     border-radius: 50%;
+    z-index: 1000;
+    opacity: 0.75;
 }
 #back-to-top:hover {
     transform: scale(1.05);
     box-shadow: var(--shadow);
 }
+/* PAGINATION */
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--background);
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+.pagination-bar {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: var(--input);
+    transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 20px;
+    min-height: 40px;
+    z-index: 100;
+}
+.pagination-button {
+    width: 40px;
+    aspect-ratio: 1/1;
+    background-color: transparent;
+    border: none;
+    padding: 8px 12px;
+    margin-inline: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    color: var(--text);
+    transition: background-color 0.3s ease;
+    border-radius: 50%;
 
+}
+.pagination-button:disabled {
+    color: #ccc;
+    cursor: not-allowed;
+}
+.pagination-button.active {
+    background-color: var(--page-button);
+    padding-top: 12px;
+    text-align: center;
+    border-radius: 50%;
+}
+.pagination-dots {
+    aspect-ratio: 1/1;
+    width: 40px;
+    padding: 8px 12px;
+    margin: 0 5px;
+    font-size: 1.5rem;
+}
+.pagination-button.inactive:hover {
+    background-color: var(--page-button-hover);
+}
+.footer-container {
+    position: relative;
+    bottom: 0;
+    z-index: 1;
+    margin-top: -4rem;
+}
+#svg {
+    
+}
 
 @media (max-width: 750px){
     #search-container {
