--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,11 @@
   box-sizing: border-box;
 }
 
-html, body, #root, .App {
-  height: 100vh;
+html, body {
+  height: 100%;
+}
+#root .App {
+  min-height: 100vh;
 }
 :root {
   --light-mode-input: 0, 0%, 52%; /* average grey */
@@ -20,6 +23,8 @@ html, body, #root, .App {
   --link-color: #00b4d8;
   --link-hover: #07ccf4;
   --header-background-animation: linear-gradient(270deg, #243B55, #2C5364, #3A6073, #204c60);
+  --page-button: hsl(263, 88%, 62%);
+  --page-button-hover: rgba(138, 74, 243, 0.2);
 }
 
 [data-theme="light"] {
@@ -31,7 +36,12 @@ html, body, #root, .App {
   --link-color: #0b525b;
   --link-hover: #127d8b;
   --header-background-animation: linear-gradient(270deg, #fce4ec, #f8bbd0, #ffccbc, #fff9c4);
+  --page-button: hsl(27, 87%, 68%);
+  --page-button-hover: hsl(27, 87%, 68%,0.2);
 }
+
+/* dark-wave: #243B55 #3A6073 */
+/* light-wave:  #ffbe9e #FF7736 */
 
 img {
   display: block;
