--- a/client/src/components/Songs/Songs.css
+++ b/client/src/components/Songs/Songs.css
@@ -1,5 +1,6 @@
 #songsApp{
     color:var(--text);
+    background-color: var(--background);
 }
 #songsContainer{
     display:grid;
@@ -8,6 +9,9 @@
     background-color: var(--background);
     color: var(--text);
     padding:0 5rem 0 5rem;
+    margin:0 auto 0 auto;
+    max-width: 1400px;
+    min-height: 40vh;
 }
 
 .songsHeader{
@@ -28,21 +32,23 @@
     margin-left:1rem;
     margin-top:0.5rem;
 }
-.searchBar{
+/* .searchBar{
     display:flex;
     justify-content: space-around;
     background-color: var(--background);
     padding: 1rem 0 1rem 0;
     height: 70px;
-}
-/* .searchBar{
-    display:grid;
+} */
+.searchBar{
+    display:flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     background-color: var(--background);
-} */
+    margin: 2rem 0 1rem 0;
+}
 .searchField{
     position:relative;
-    height:100%;
+    height:25px;
     width:360px;
 }
 #searchIcon{
@@ -68,7 +74,7 @@
     display:flex;
     justify-content: space-around;
     align-items: center;
-    height:100%;
+    height:25px;
 }
 #searchSelect{
     background-color: var(--input);
