--- a/client/src/components/Books/Books.css
+++ b/client/src/components/Books/Books.css
@@ -32,6 +32,10 @@ a:hover {
     font-family: Arial, sans-serif;
     color: var(--text);
     min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 #main-content {
     background-color: var(--background);
@@ -250,8 +254,9 @@ a:hover {
     margin: auto;
 }
 #big-card-container {
-    margin-inline: 2.5rem;
+    margin-inline: auto;
     padding: 1rem;
+    max-width: var(--maxWidth);
     border-radius: var(--radius);
     box-shadow: var(--shadow);
     background-color: var(--elements);
@@ -366,12 +371,8 @@ a:hover {
 /* Footer */
 .footer-container {
     position: relative;
-    bottom: 0;
     z-index: 0;
     margin-top: -7rem;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
 }
 #svg {
     height: 450px;
