--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,8 +33,10 @@ html, body {
   --text: hsl(200, 15%, 8%); /* 90% black */
   --shadow: 1px 1px 15px rgb(211, 209, 209);
   --input: #faedcd;
-  --link-color: #0b525b;
-  --link-hover: #127d8b;
+  /* --link-color: #0b525b;
+  --link-hover: #127d8b; */
+  --link-color: #067a89;
+  --link-hover: #12b0c5;
   --header-background-animation: linear-gradient(270deg, #fce4ec, #f8bbd0, #ffccbc, #fff9c4);
   --page-button: hsl(27, 87%, 68%);
   --page-button-hover: hsl(27, 87%, 68%,0.2);
