--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,12 +6,15 @@
 
 html, body {
   height: 100%;
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+  font-family: cursive;
 }
 #root .App {
   min-height: 100vh;
 }
 :root {
-  --light-mode-input: 0, 0%, 52%; /* average grey */
+  /* --light-mode-input: 0, 0%, 52%;  */
 }
 
 [data-theme="dark"] {
